crates/pgls_pretty_print/tests/snapshots/multi/tests__incremental_sort_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/incremental_sort.sql
snapshot_kind: text
---
SELECT * FROM (SELECT * FROM tenk1 ORDER BY four) AS t ORDER BY four, ten LIMIT 1;

SET work_mem = '2MB';

SELECT * FROM (SELECT * FROM tenk1 ORDER BY four) AS t ORDER BY four, ten;

RESET work_mem;

CREATE TABLE t (
  a INT,
  b INT
);

CREATE OR REPLACE FUNCTION explain_analyze_without_memory(query TEXT)
RETURNS TABLE (
  out_line TEXT
)
LANGUAGE "plpgsql"
AS '
declare
  line text;
begin
  for line in
    execute ''explain (analyze, costs off, summary off, timing off, buffers off) '' || query
  loop
    out_line := regexp_replace(line, ''\d+kB'', ''NNkB'', ''g'');
    return next;
  end loop;
end;
';

CREATE OR REPLACE FUNCTION explain_analyze_inc_sort_nodes(query TEXT)
RETURNS JSONB
LANGUAGE "plpgsql"
AS '
declare
  elements jsonb;
  element jsonb;
  matching_nodes jsonb := ''[]''::jsonb;
begin
  execute ''explain (analyze, costs off, summary off, timing off, buffers off, format ''''json'''') '' || query into strict elements;
  while jsonb_array_length(elements) > 0 loop
    element := elements->0;
    elements := elements - 0;
    case jsonb_typeof(element)
    when ''array'' then
      if jsonb_array_length(element) > 0 then
        elements := elements || element;
      end if;
    when ''object'' then
      if element ? ''Plan'' then
        elements := elements || jsonb_build_array(element->''Plan'');
        element := element - ''Plan'';
      else
        if element ? ''Plans'' then
          elements := elements || jsonb_build_array(element->''Plans'');
          element := element - ''Plans'';
        end if;
        if (element->>''Node Type'')::text = ''Incremental Sort'' then
          matching_nodes := matching_nodes || element;
        end if;
      end if;
    end case;
  end loop;
  return matching_nodes;
end;
';

CREATE OR REPLACE FUNCTION explain_analyze_inc_sort_nodes_without_memory(query TEXT)
RETURNS JSONB
LANGUAGE "plpgsql"
AS '
declare
  nodes jsonb := ''[]''::jsonb;
  node jsonb;
  group_key text;
  space_key text;
begin
  for node in select * from jsonb_array_elements(explain_analyze_inc_sort_nodes(query)) t loop
    for group_key in select unnest(array[''Full-sort Groups'', ''Pre-sorted Groups'']::text[]) t loop
      for space_key in select unnest(array[''Sort Space Memory'', ''Sort Space Disk'']::text[]) t loop
        node := jsonb_set(node, array[group_key, space_key, ''Average Sort Space Used''], ''"NN"'', false);
        node := jsonb_set(node, array[group_key, space_key, ''Peak Sort Space Used''], ''"NN"'', false);
      end loop;
    end loop;
    nodes := nodes || node;
  end loop;
  return nodes;
end;
';

CREATE OR REPLACE FUNCTION explain_analyze_inc_sort_nodes_verify_invariants(query TEXT)
RETURNS BOOLEAN
LANGUAGE "plpgsql"
AS '
declare
  node jsonb;
  group_stats jsonb;
  group_key text;
  space_key text;
begin
  for node in select * from jsonb_array_elements(explain_analyze_inc_sort_nodes(query)) t loop
    for group_key in select unnest(array[''Full-sort Groups'', ''Pre-sorted Groups'']::text[]) t loop
      group_stats := node->group_key;
      for space_key in select unnest(array[''Sort Space Memory'', ''Sort Space Disk'']::text[]) t loop
        if (group_stats->space_key->''Peak Sort Space Used'')::bigint < (group_stats->space_key->''Peak Sort Space Used'')::bigint then
          raise exception ''% has invalid max space < average space'', group_key;
        end if;
      end loop;
    end loop;
  end loop;
  return true;
end;
';

INSERT INTO t (a, b) SELECT i / 100 + 1, i + 1 FROM generate_series(0, 999) AS n (i);

ANALYZE t;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 31;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 31;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 32;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 32;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 33;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 33;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 65;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 65;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 66;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 66;

DELETE FROM t;

INSERT INTO t (a, b) SELECT i / 50 + 1, i + 1 FROM generate_series(0, 999) AS n (i);

ANALYZE t;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 55;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 55;

SELECT
  explain_analyze_without_memory(
    'select * from (select * from t order by a) s order by a, b limit 55'
  );

SELECT
  jsonb_pretty(
    explain_analyze_inc_sort_nodes_without_memory(
      'select * from (select * from t order by a) s order by a, b limit 55'
    )
  );

SELECT
  explain_analyze_inc_sort_nodes_verify_invariants(
    'select * from (select * from t order by a) s order by a, b limit 55'
  );

DELETE FROM t;

INSERT INTO t (a, b)
SELECT
  CASE WHEN i < 5 THEN i ELSE 9 END,
  i
FROM
  generate_series(1, 1000) AS n (i);

ANALYZE t;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 70;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 70;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 5;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 5;

BEGIN;

SET LOCAL enable_hashjoin = off;

SET LOCAL enable_mergejoin = off;

SET LOCAL enable_material = off;

SET LOCAL enable_sort = off;

SELECT
  *
FROM
  t
  LEFT OUTER JOIN
    (SELECT
      *
    FROM
      (SELECT * FROM t ORDER BY a) AS v
    ORDER BY a,
      b)
    AS s
  ON s.a = t.a
WHERE
  t.a IN (1, 2);

SELECT
  *
FROM
  t
  LEFT OUTER JOIN
    (SELECT
      *
    FROM
      (SELECT * FROM t ORDER BY a) AS v
    ORDER BY a,
      b)
    AS s
  ON s.a = t.a
WHERE
  t.a IN (1, 2);

ROLLBACK;

SELECT
  explain_analyze_without_memory(
    'select * from (select * from t order by a) s order by a, b limit 70'
  );

SELECT
  jsonb_pretty(
    explain_analyze_inc_sort_nodes_without_memory(
      'select * from (select * from t order by a) s order by a, b limit 70'
    )
  );

SELECT
  explain_analyze_inc_sort_nodes_verify_invariants(
    'select * from (select * from t order by a) s order by a, b limit 70'
  );

DELETE FROM t;

INSERT INTO t (a, b) SELECT i / 10, i FROM generate_series(1, 1000) AS n (i);

ANALYZE t;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 31;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 31;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 32;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 32;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 33;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 33;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 65;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 65;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 66;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 66;

DELETE FROM t;

INSERT INTO t (a, b) SELECT i, i FROM generate_series(1, 1000) AS n (i);

ANALYZE t;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 31;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 31;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 32;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 32;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 33;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 33;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 65;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 65;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 66;

SELECT * FROM (SELECT * FROM t ORDER BY a) AS s ORDER BY a, b LIMIT 66;

DELETE FROM t;

DROP TABLE "t";

SET min_parallel_table_scan_size = '1kB';

SET min_parallel_index_scan_size = '1kB';

SET parallel_setup_cost = 0;

SET parallel_tuple_cost = 0;

SET max_parallel_workers_per_gather = 2;

CREATE TABLE t (
  a INT,
  b INT,
  c INT
);

INSERT INTO t SELECT mod(i, 10), mod(i, 10), i FROM generate_series(1, 10000) AS s (i);

CREATE INDEX ON t USING btree (a);

ANALYZE t;

SET enable_incremental_sort = off;

SELECT a, b, SUM(c) FROM t GROUP BY 1, 2 ORDER BY 1, 2, 3 LIMIT 1;

SET enable_incremental_sort = 'on';

SELECT a, b, SUM(c) FROM t GROUP BY 1, 2 ORDER BY 1, 2, 3 LIMIT 1;

SET enable_hashagg = off;

SELECT * FROM t UNION SELECT * FROM t ORDER BY 1, 3;

SELECT DISTINCT a, b FROM t;

DROP TABLE "t";

SET enable_hashagg = off;

SET enable_seqscan = off;

SET enable_incremental_sort = off;

SET parallel_tuple_cost = 0;

SET parallel_setup_cost = 0;

SET min_parallel_table_scan_size = 0;

SET min_parallel_index_scan_size = 0;

SELECT DISTINCT
  sub.unique1,
  stringu1
FROM
  tenk1,
  LATERAL (SELECT tenk1.unique1 FROM generate_series(1, 1000))
  AS sub;

SELECT
  sub.unique1,
  stringu1
FROM
  tenk1,
  LATERAL (SELECT tenk1.unique1 FROM generate_series(1, 1000))
  AS sub
ORDER BY 1,
  2;

SELECT DISTINCT
  sub.unique1,
  md5(stringu1)
FROM
  tenk1,
  LATERAL (SELECT tenk1.unique1 FROM generate_series(1, 1000))
  AS sub;

SELECT
  sub.unique1,
  md5(stringu1)
FROM
  tenk1,
  LATERAL (SELECT tenk1.unique1 FROM generate_series(1, 1000))
  AS sub
ORDER BY 1,
  2;

SELECT
  COUNT(*)
FROM
  tenk1 AS t1
  INNER JOIN
    tenk1 AS t2
  ON t1.unique1 = t2.unique2
  INNER JOIN
    tenk1 AS t3
  ON t2.unique1 = t3.unique1
ORDER BY COUNT(*);

SELECT DISTINCT
  unique1,
  (SELECT
    t.unique1
  FROM
    tenk1
  WHERE
    tenk1.unique1 = t.unique1)
FROM
  tenk1 AS t,
  generate_series(1, 1000);

SELECT
  unique1,
  (SELECT
    t.unique1
  FROM
    tenk1
  WHERE
    tenk1.unique1 = t.unique1)
FROM
  tenk1 AS t,
  generate_series(1, 1000)
ORDER BY 1,
  2;

SELECT DISTINCT
  sub.unique1,
  stringu1 || CAST(random() AS TEXT)
FROM
  tenk1,
  LATERAL (SELECT tenk1.unique1 FROM generate_series(1, 1000))
  AS sub;

SELECT
  sub.unique1,
  stringu1 || CAST(random() AS TEXT)
FROM
  tenk1,
  LATERAL (SELECT tenk1.unique1 FROM generate_series(1, 1000))
  AS sub
ORDER BY 1,
  2;

RESET enable_hashagg;

RESET enable_seqscan;

RESET enable_incremental_sort;

RESET parallel_tuple_cost;

RESET parallel_setup_cost;

RESET min_parallel_table_scan_size;

RESET min_parallel_index_scan_size;

CREATE TABLE point_table (
  a point,
  b INT
);

CREATE INDEX "point_table_a_idx" ON point_table USING gist (a);

SELECT a, b, a <-> point(5, 5) AS dist FROM point_table ORDER BY dist, b LIMIT 1;

SELECT a, b, a <-> point(5, 5) AS dist FROM point_table ORDER BY dist, b DESC LIMIT 1;

SELECT
  *
FROM
  (SELECT * FROM tenk1 ORDER BY four) AS t1
  INNER JOIN
    tenk1 AS t2
  ON t1.four = t2.four AND t1.two = t2.two
ORDER BY t1.four,
  t1.two
LIMIT 1;

CREATE TABLE prt_tbl (
  a INT,
  b INT
)
PARTITION BY RANGE(a);

CREATE TABLE prt_tbl_1 PARTITION OF prt_tbl FOR VALUES FROM (0) TO (100);

CREATE TABLE prt_tbl_2 PARTITION OF prt_tbl FOR VALUES FROM (100) TO (200);

INSERT INTO prt_tbl SELECT i % 200, i FROM generate_series(1, 1000) AS i;

CREATE INDEX ON prt_tbl_1 USING btree (a);

CREATE INDEX ON prt_tbl_2 USING btree (a, b);

ANALYZE prt_tbl;

SET enable_seqscan = off;

SET enable_bitmapscan = off;

SELECT * FROM prt_tbl ORDER BY a, b;

SELECT * FROM prt_tbl_1 UNION ALL SELECT * FROM prt_tbl_2 ORDER BY a, b;

RESET enable_bitmapscan;

RESET enable_seqscan;

DROP TABLE "prt_tbl";
